# stephenstipsytalks-com

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
ops/notes/: static-site-deployment-instructions.md
